--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,5 @@
 <resources>
 
-    <style name="Theme.ChoiDujour" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/sesl_round_and_bgcolor_light</item>
-        <item name="android:navigationBarColor">@color/sesl_round_and_bgcolor_light</item>
-        <item name="android:windowLightStatusBar">true</item>
-        <item name="android:windowLightNavigationBar">true</item>
-        <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
-        <item name="android:listChoiceBackgroundIndicator">?attr/listChoiceBackgroundIndicator</item>
-    </style>
+    <style name="Theme.ChoiDujour" parent="Theme.OneUI" />
 
 </resources>
