--- a/oneui/src/main/res/values-night/themes.xml
+++ b/oneui/src/main/res/values-night/themes.xml
@@ -1,12 +1,16 @@
 <resources>
 
     <style name="Theme.OneUI" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:statusBarColor">@color/sep_theme_background_color</item>
-        <item name="android:navigationBarColor">@color/sep_theme_background_color</item>
+        <item name="android:statusBarColor">@color/sep_theme_round_and_bg_color</item>
+        <item name="android:navigationBarColor">@color/sep_theme_round_and_bg_color</item>
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:windowLightNavigationBar">false</item>
         <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
         <item name="android:listChoiceBackgroundIndicator">?attr/listChoiceBackgroundIndicator</item>
+        <item name="appBarLayoutStyle">@style/Widget.Design.AppBarLayout</item>
+        <item name="bottomNavigationStyle">@style/Widget.Design.BottomNavigationView</item>
+        <item name="collapsingToolbarLayoutStyle">@style/Widget.Design.CollapsingToolbar</item>
+        <item name="tabStyle">@style/Widget.Design.TabLayout.Light</item>
     </style>
 
 </resources>
