--- a/oneui/src/main/res/values/color.xml
+++ b/oneui/src/main/res/values/color.xml
@@ -5,4 +5,7 @@
     <color name="sep_theme_round_and_bg_color">@color/sesl_round_and_bgcolor_light</color>
     <color name="sep_theme_background_color">@color/sesl_background_color_light</color>
 
+    <!-- DrawerActivity -->
+    <color name="sep_drawerlayout_drawer_dim_color">#33000000</color>
+
 </resources>
