--- a/oneui/src/main/res/values/attrs.xml
+++ b/oneui/src/main/res/values/attrs.xml
@@ -11,6 +11,9 @@
     </attr>
 
     <!-- Custom Views -->
+    <declare-styleable name="RoundedCoordinatorLayout">
+        <attr name="roundedCorners" />
+    </declare-styleable>
     <declare-styleable name="RoundedFrameLayout">
         <attr name="roundedCorners" />
     </declare-styleable>
