--- a/oneui/src/main/res/layout/oui_layout_app_bar_ui.xml
+++ b/oneui/src/main/res/layout/oui_layout_app_bar_ui.xml
@@ -21,7 +21,12 @@
             android:layout_height="match_parent"
             app:layout_scrollFlags="exitUntilCollapsed|scroll">
 
-            <!-- Toolbar gets added programmatically -->
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_gravity="bottom"
+                app:layout_collapseMode="pin" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
