--- a/oneui/oneui/src/main/res/values/themes.xml
+++ b/oneui/oneui/src/main/res/values/themes.xml
@@ -11,6 +11,7 @@
         <item name="bottomNavigationStyle">@style/Widget.Design.Light.BottomNavigationView</item>
         <item name="collapsingToolbarLayoutStyle">@style/Widget.Design.Light.CollapsingToolbar</item>
         <item name="tabStyle">@style/Widget.Design.TabLayout.Light</item>
+        <item name="switchBarStyle">@style/Widget.OneUI.SwitchBar</item>
     </style>
 
 </resources>
