oneui: res: add list divider drawable
Signed-off-by: BlackMesa123 <giangrecosalvo9@gmail.com>

--- a/oneui/oneui/src/main/res/values-night/colors.xml
+++ b/oneui/oneui/src/main/res/values-night/colors.xml
@@ -3,13 +3,14 @@
     <!-- Common -->
     <color name="sep_theme_round_and_bg_color">@color/sesl_round_and_bgcolor_dark</color>
     <color name="sep_theme_background_color">@color/sesl_background_color_dark</color>
-
-    <!-- DrawerActivity -->
-    <color name="sep_drawerlayout_drawer_dim_color">#cc000000</color>
+    <color name="sep_theme_list_divider_color">@color/sesl_list_divider_color_dark</color>
 
     <!-- SwitchBar -->
     <color name="sep_theme_switch_bar_off_background_color">#ff171717</color>
     <color name="sep_theme_switch_bar_on_background_color">#ff2d2d2d</color>
     <color name="sep_theme_switch_bar_off_text_color">#fffafafa</color>
+
+    <!-- DrawerActivity -->
+    <color name="sep_drawerlayout_drawer_dim_color">#cc000000</color>
 
 </resources>
