--- a/app/src/main/res/layout/view_list_item_layout.xml
+++ b/app/src/main/res/layout/view_list_item_layout.xml
@@ -4,7 +4,7 @@
     tools:viewBindingIgnore="true">
 
     <FrameLayout
-        android:id="@+id/home_list_item_icon_container"
+        android:id="@+id/list_item_icon_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingEnd="16.0dp"
@@ -12,7 +12,7 @@
         android:visibility="gone">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/home_list_item_icon"
+            android:id="@+id/list_item_icon"
             android:layout_width="28.0dp"
             android:layout_height="28.0dp"
             android:layout_gravity="center"/>
@@ -27,7 +27,7 @@
         android:paddingBottom="14.0dp">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/home_list_item_title"
+            android:id="@+id/list_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingEnd="10.0dp"
@@ -36,10 +36,10 @@
             android:ellipsize="end" />
 
         <FrameLayout
-            android:id="@+id/home_list_item_badge_container"
+            android:id="@+id/list_item_badge_container"
             android:layout_width="10.0dp"
             android:layout_height="10.0dp"
-            android:layout_alignEnd="@id/home_list_item_title"
+            android:layout_alignEnd="@id/list_item_title"
             android:gravity="center"
             android:visibility="gone">
 
@@ -51,12 +51,12 @@
         </FrameLayout>
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/home_list_item_summary"
+            android:id="@+id/list_item_summary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingEnd="10.0dp"
-            android:layout_alignStart="@id/home_list_item_title"
-            android:layout_below="@id/home_list_item_title"
+            android:layout_alignStart="@id/list_item_title"
+            android:layout_below="@id/list_item_title"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textAlignment="viewStart"
             android:visibility="gone" />
