--- a/oneui/oneui/src/main/res/layout/oui_layout_app_bar_ui.xml
+++ b/oneui/oneui/src/main/res/layout/oui_layout_app_bar_ui.xml
@@ -26,6 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_gravity="bottom"
+                app:background="@null"
                 app:layout_collapseMode="pin" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
