--- a/oneui/oneui/src/main/res/values/attrs.xml
+++ b/oneui/oneui/src/main/res/values/attrs.xml
@@ -12,6 +12,15 @@
     <attr name="switchBarStyle" format="reference" />
 
     <!-- Custom Views -->
+    <declare-styleable name="ListContainer">
+        <attr name="showDivider" format="boolean" />
+    </declare-styleable>
+    <declare-styleable name="ListItemView">
+        <attr name="icon" format="reference" />
+        <attr name="title" format="string" />
+        <attr name="summary" format="string" />
+        <attr name="showBadge" format="boolean" />
+    </declare-styleable>
     <declare-styleable name="RoundedCoordinatorLayout">
         <attr name="roundedCorners" />
     </declare-styleable>
