oneui: widget: introduce RoundedNestedScrollView
Signed-off-by: BlackMesa123 <giangrecosalvo9@gmail.com>

--- a/oneui/oneui/src/main/res/values/attrs.xml
+++ b/oneui/oneui/src/main/res/values/attrs.xml
@@ -30,6 +30,9 @@
     <declare-styleable name="RoundedLinearLayout">
         <attr name="roundedCorners" />
     </declare-styleable>
+    <declare-styleable name="RoundedNestedScrollView">
+        <attr name="roundedCorners" />
+    </declare-styleable>
     <declare-styleable name="SwitchBar">
         <attr name="switchBarBackgroundActivatedColor" format="color" />
         <attr name="switchBarBackgroundColor" format="color" />
