app: ui: widget: introduce UpdateStatusView
Signed-off-by: BlackMesa123 <giangrecosalvo9@gmail.com>

--- a/oneui/oneui/src/main/res/values-night/colors.xml
+++ b/oneui/oneui/src/main/res/values-night/colors.xml
@@ -1,6 +1,7 @@
 <resources>
 
     <!-- Common -->
+    <color name="sep_theme_primary_color">@color/sesl_primary_color_dark</color>
     <color name="sep_theme_round_and_bg_color">@color/sesl_round_and_bgcolor_dark</color>
     <color name="sep_theme_background_color">@color/sesl_background_color_dark</color>
     <color name="sep_theme_list_divider_color">@color/sesl_list_divider_color_dark</color>
