--- a/app/src/main/res/xml/sep_color_theme_meta.xml
+++ b/app/src/main/res/xml/sep_color_theme_meta.xml
@@ -6,5 +6,7 @@
         <Property Comment="SwitchBar on background color" DefaultValue="#ffe9e9e9" DestAttribName="sep_theme_switch_bar_on_background_color" UID="611-2" ValueRef="1-40-1" ValueType="BgColor" />
         <Property Comment="SwitchBar off text color" DefaultValue="#ff252525" DestAttribName="sep_theme_switch_bar_off_text_color" UID="611-3" ValueRef="1-40-4" ValueType="BgColor" />
         <Property Comment="SwitchBar on text color" DefaultValue="#ff0072de" DestAttribName="sep_theme_switch_bar_on_text_color" UID="611-4" ValueRef="1-40-3" ValueType="BgColor" />
+        <Property Comment="USV icon color" DefaultValue="#ff0381fe" DestAttribName="update_status_view_icon_color" UID="611-5" ValueRef="1-A" ValueType="Color" />
+        <Property Comment="USV text color" DefaultValue="#ff252525" DestAttribName="update_status_view_main_text_color" UID="611-6" ValueRef="1-1-3" ValueType="Color" />
     </AppMetaData>
 </ThemeMetaData>
