oneui: widget: ListItemView: add enabled status support
Signed-off-by: BlackMesa123 <giangrecosalvo9@gmail.com>

--- a/oneui/oneui/src/main/res/values/attrs.xml
+++ b/oneui/oneui/src/main/res/values/attrs.xml
@@ -16,6 +16,7 @@
         <attr name="showDivider" format="boolean" />
     </declare-styleable>
     <declare-styleable name="ListItemView">
+        <attr name="android:enabled" />
         <attr name="icon" format="reference" />
         <attr name="title" format="string" />
         <attr name="summary" format="string" />
